--- a/ciencia.html
+++ b/ciencia.html
@@ -34,8 +34,8 @@
                             <div class="nav-wrapper container">
                                 <div class="table">
                                     <ul id="horizontal-list" class="right hide-on-med-and-down">
-                                        <li><a class="waves-effect waves-light btn active" href="/">Mundo Simis</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="/">Mundo Simis</a></li>
+                                        <li><a class="waves-effect waves-light btn active" href="ciencia.html">Ciencia</a></li>
                                         <li><a class="waves-effect waves-light btn" href="#">Cultura</a></li>
                                         <li><a class="waves-effect waves-light btn" href="#">Historia</a></li>
                                         <li><a class="waves-effect waves-light btn" href="#">Wallpapers</a></li>
@@ -46,8 +46,8 @@
                                     <p class="center-align">
                                         <img src="img/drSimiLogo.png" alt="Dr Simi logo">
                                     </p>
-                                    <li><a class="waves-effect waves-light btn active" href="/">Mundo Simi</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="/">Mundo Simi</a></li>
+                                    <li><a class="waves-effect waves-light btn active" href="ciencia.html">Ciencia</a></li>
                                     <li><a class="waves-effect waves-light btn" href="#">Cultura</a></li>
                                     <li><a class="waves-effect waves-light btn" href="#">Historia</a></li>
                                     <li><a class="waves-effect waves-light btn" href="#">Wallpapers</a></li>
