Platillas generales para diferentes secciones, integración de backgrounds con parallax effect para cada uno de ellos

--- a/cultura.html
+++ b/cultura.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr Simi | Ciencia</title>
+    <title>Dr Simi | Cultura</title>
     <!--Import Google Icon Font-->
     <link href='https://fonts.googleapis.com/css?family=Passion+One:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -17,13 +17,11 @@
     <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection" />
 </head>
 
-<body>
-    <div class="stars"></div>
-    <div class="twinkling"></div>
-    <div class="clouds"></div>
+<body style="background-color: skyblue;">
+    <div class="clouds" style="background: transparent url(../img/cityClouds.png) repeat top center;"></div>
     <div id="backFX">
         <div id="particle-target"></div>
-        <img class="parallaxFx" src="img/moon.png" /><img class="parallaxFx" src="img/earthMountainsBg.png" /><img class="parallaxFx" src="img/earthMountainsFr.png" /><img class="parallaxFx" src="img/earthGround.png" />
+        <img class="parallaxFx" src="img/sun.png" /><img class="parallaxFx" src="img/cityBg.png" /><img class="parallaxFx" src="img/cityFr.png" /><img class="parallaxFx" src="img/cityGround.png" />
     </div>
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
@@ -35,8 +33,8 @@
                                 <div class="table">
                                     <ul id="horizontal-list" class="right hide-on-med-and-down">
                                         <li><a class="waves-effect waves-light btn" href="/">Mundo Simis</a></li>
-                                        <li><a class="waves-effect waves-light btn active" href="ciencia.html">Ciencia</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="cultura.html">Cultura</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
+                                        <li><a class="waves-effect waves-light btn active" href="cultura.html">Cultura</a></li>
                                         <li><a class="waves-effect waves-light btn" href="historia.html">Historia</a></li>
                                         <li><a class="waves-effect waves-light btn" href="wallpapers.html">Wallpapers</a></li>
                                         <li><a class="waves-effect waves-light btn" href="zoocial.html">Zoocial</a></li>
@@ -47,8 +45,8 @@
                                         <img src="img/drSimiLogo.png" alt="Dr Simi logo">
                                     </p>
                                     <li><a class="waves-effect waves-light btn" href="/">Mundo Simi</a></li>
-                                    <li><a class="waves-effect waves-light btn active" href="ciencia.html">Ciencia</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="cultura.html">Cultura</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
+                                    <li><a class="waves-effect waves-light btn active" href="cultura.html">Cultura</a></li>
                                     <li><a class="waves-effect waves-light btn" href="historia.html">Historia</a></li>
                                     <li><a class="waves-effect waves-light btn" href="wallpapers.html">Wallpapers</a></li>
                                     <li><a class="waves-effect waves-light btn" href="zoocial.html">Zoocial</a></li>
@@ -59,12 +57,8 @@
                     </div>
                 </div>
                 <div class="inner cover">
-                    <div class="container cienciaContainer">
+                    <div class="container culturaContainer">
                         <div class="row">
-
-                            <div class="col s12">
-                                <h4 class="center-align cyan darken-4 teal-text text-accent-3" style="border-radius: 20px;">El camino de todo científico loco inicia aquí. ¡Bienvenido!</h4>
-                            </div>
                         
                             <div class="col s3">
                                 <div id="cienciaCard" class="card small hoverable animated rotateIn">
@@ -73,11 +67,11 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="center-align">
-                                            <span id="cienciaTitle" class="card-title activator pink-text">Astronomía</span>
+                                            <span id="cienciaTitle" class="card-title activator pink-text">De viaje por las estrellas</span>
                                         </p>
                                     </div>
                                     <div class="card-reveal">
-                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>Astronomía</span>
+                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>De viaje por las estrellas</span>
                                         <hr>
                                         <p id="cienciaDescription">Voltea al cielo y contempla las maravillas del espacio</p>
                                         <p class="center-align">
@@ -94,11 +88,11 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="center-align">
-                                            <span id="cienciaTitle" class="card-title activator pink-text">Biología</span>
+                                            <span id="cienciaTitle" class="card-title activator pink-text">De viaje por las estrellas</span>
                                         </p>
                                     </div>
                                     <div class="card-reveal">
-                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>Biología</span>
+                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>De viaje por las estrellas</span>
                                         <hr>
                                         <p id="cienciaDescription">Voltea al cielo y contempla las maravillas del espacio</p>
                                         <p class="center-align">
@@ -115,11 +109,11 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="center-align">
-                                            <span id="cienciaTitle" class="card-title activator pink-text">Química</span>
+                                            <span id="cienciaTitle" class="card-title activator pink-text">De viaje por las estrellas</span>
                                         </p>
                                     </div>
                                     <div class="card-reveal">
-                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>Química</span>
+                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>De viaje por las estrellas</span>
                                         <hr>
                                         <p id="cienciaDescription">Voltea al cielo y contempla las maravillas del espacio</p>
                                         <p class="center-align">
@@ -136,11 +130,11 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="center-align">
-                                            <span id="cienciaTitle" class="card-title activator pink-text">Física</span>
+                                            <span id="cienciaTitle" class="card-title activator pink-text">De viaje por las estrellas</span>
                                         </p>
                                     </div>
                                     <div class="card-reveal">
-                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>Física</span>
+                                        <span id="cienciaTitleReveal" class="card-title white-text"><i class="material-icons right">close</i><br>De viaje por las estrellas</span>
                                         <hr>
                                         <p id="cienciaDescription">Voltea al cielo y contempla las maravillas del espacio</p>
                                         <p class="center-align">
@@ -151,7 +145,7 @@
                             </div>
 
                         </div>
-
+                        <div id="paginacion"></div>
                     </div>
                 </div>
                 <div class="mastfoot">
