--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr Simi</title>
+    <title>Dr Simi | Inicio</title>
     <!--Import Google Icon Font-->
     <link href='https://fonts.googleapis.com/css?family=Passion+One:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -38,12 +38,12 @@
                             <div class="nav-wrapper container">
                                 <div class="table">
                                     <ul id="horizontal-list" class="right hide-on-med-and-down">
-                                        <li><a class="waves-effect waves-light btn active" href="/">Mundo Simi</a></li>
+                                        <li><a class="waves-effect waves-light btn active" href="/">Mundo Simis</a></li>
                                         <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="#">Cultura</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="#">Historia</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="#">Wallpapers</a></li>
-                                        <li><a class="waves-effect waves-light btn" href="#">Zoocial</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="cultura.html">Cultura</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="historia.html">Historia</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="wallpapers.html">Wallpapers</a></li>
+                                        <li><a class="waves-effect waves-light btn" href="zoocial.html">Zoocial</a></li>
                                     </ul>
                                 </div>
                                 <ul id="nav-mobile" class="side-nav darkcyanteal lighten-2">
@@ -52,10 +52,10 @@
                                     </p>
                                     <li><a class="waves-effect waves-light btn active" href="/">Mundo Simi</a></li>
                                     <li><a class="waves-effect waves-light btn" href="ciencia.html">Ciencia</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="#">Cultura</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="#">Historia</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="#">Wallpapers</a></li>
-                                    <li><a class="waves-effect waves-light btn" href="#">Zoocial</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="cultura.html">Cultura</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="historia.html">Historia</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="wallpapers.html">Wallpapers</a></li>
+                                    <li><a class="waves-effect waves-light btn" href="zoocial.html">Zoocial</a></li>
                                 </ul>
                                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
                             </div>
